Se arreglaron las vistas de bebidas, insumos y cursos para que aparezcan los botones de editar y eliminar solo al usuario que publico el aviso

--- a/views/detail_bebidas.ejs
+++ b/views/detail_bebidas.ejs
@@ -98,9 +98,10 @@
                     </div>
                 
                 <!-- editar / borrar -->
-                <% if (user != null) { %> 
+                <% if (user != null && user.email == product.usuario.email) { %> 
                 <%- include("partials/editButtons") %> 
                 <% } %>
+                 
             </div>
 
           
