seccion de venta en el home

--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -1,4 +1,4 @@
-<div class="p-5 mb-3 mt-3 bg-warning">
+<section class="p-5 mb-3 mt-3 bg-warning">
     <div class="container mt-0 p-0 d-flex justify-content-beetwen">
         <div class="row m-0 p-0 d-flex align-items-center position-relative  beerContainer ">
             <div class="md-col-8 sm-col-12 pl-5 position-relative">
@@ -7,20 +7,12 @@
                 esté en frente a millones de consumidores.</p>
             </br><a class="btn btn-outline-dark btn-lg" href="/products/form_prod" role="button">Vender</a>
             </div>
-            <div class="md-col-4 d-none d-md-block beer position-absolute ">    
+            <div class="md-col-4 d-none d-md-block beer position-absolute">    
                 
                         <img class="beer_cup" src="img/banner/beer_shadow.png" alt="">
                 
             </div>
         </div>
     </div>
-  </div>
-
-<script defer src="/js/duffBeer.js"></script>
-
-
-
-
-
-
+  
 </section>
