--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,16 +53,33 @@
 /*-----------CATEGORIAS-----------*/
 
 /*-----------PRODUCTOS-----------*/
+
+.box-6 {
+    height: 320px;
+    padding: 5px;
+    margin:10px;
+}
+.box-6:hover{
+    box-shadow: 2px 2px 2px 3px rgba(192, 192, 192, 0.2);
+    width: 110% !important;
+}
+.box-6 img {
+    width: 140px;
+}
 .box-6 a {
     text-decoration: none;
     color: black;
     font-size: 0.9em;
 }
 .box-6 h5 {
-    color: grey;
+    color: black;
+    text-transform: uppercase;
     font-size: 1em;
     font-family: LATO;
 }
+
+
+
 
 
 /*--------------VENDE--------------*/
