--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -59,7 +59,7 @@
                     <!-- envios -->
                     <div class="col-3">
                         <div class="custom-control custom-checkbox mr-sm-2">
-                            <input type="checkbox" class="custom-control-input" id="sell_envios" name="envio" required> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="checkbox" class="custom-control-input" id="sell_envios" name="envio"> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             <label class="custom-control-label" for="sell_envios">Puedo hacer envios!</label> 
                         </div>
                     </div>
@@ -72,21 +72,21 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Marca</p>
                         <div class="custom-file">
-                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title" id="marca" name="marca" required/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title" id="marca" name="marca"/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             
                         </div>
                     </div>
                     <div class="form-group col-4" id="ibu" style="display:none;">
                         <p class="mb-1">Ibu</p>
                         <div class="custom-file">
-                            <input type="number" class="form-control" aria-describedby="sell_title"  name="ibu" required/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="number" class="form-control" aria-describedby="sell_title"  name="ibu"/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             
                         </div>
                     </div>
                     <div class="form-group col-4" id="alcohol" style="display:none;">
                         <p class="mb-1">Alcohol %</p>
                         <div class="custom-file">
-                            <input type="number" class="form-control"  aria-describedby="sell_title" id="alcohol" name="alcohol" required/>
+                            <input type="number" class="form-control"  aria-describedby="sell_title" id="alcohol" name="alcohol"/>
                             
                         </div>
                     </div>
